--- a/html/layout.html
+++ b/html/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>{{.PageName}}</title>
-    <link rel="stylesheet" href="\Resources\css\site.css">
+    <link rel="stylesheet" href="/Resources/css/site.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <script src="/Resources/js/jQuery.js"></script>
     <script src="/Resources/js/templateAnim.js"></script>
